--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     --gradient: linear-gradient(114.69deg, #2E71D6 38.74%, #5000B6 83.94%)
 }
 
-html, * {
+html, *, body {
     cursor: none;
 }
 
@@ -21,6 +21,11 @@ body {
     background-color: var(--main-bg);
     color: white;
     padding-left: 130px;
+}
+/* set all the sizes so they are correct */
+html, #root, .App, body {
+    height: 100%;
+    min-height: max-content;
 }
 
 h1 {
